website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.1.1/migration/v3.mdx
---
slug: /migration/v3
sidebar_label: To Docusaurus v3
---

# 升級至 Docusaurus v3

本文檔將協助您將網站從 Docusaurus v2 升級至 Docusaurus v3。

Docusaurus v3 是一個新的**主要版本**，包含需要您相應調整網站的**破壞性變更**。我們將在此過程中提供指引，並提及一些可選建議。

這並非全面重寫，且破壞性變更相對容易處理。最簡單的網站最終可能只需更新 npm 依賴即可完成升級。

主要的破壞性變更是從 MDX v1 升級至 MDX v3。詳情請閱讀 [**MDX v2**](https://mdxjs.com/blog/v2/) 和 [**MDX v3**](https://mdxjs.com/blog/v3/) 的發布說明。MDX 現在會**更嚴格**且**有細微差異**地編譯您的 Markdown 內容。

:::tip[升級前須知]

在升級前，我們建議先[**為 Docusaurus v3 準備您的網站**](/blog/preparing-your-site-for-docusaurus-v3)。有些變更您可以在**Docusaurus v2 下逐步處理**。這樣做有助於減少最終升級至 Docusaurus v3 所需的工作量。

對於複雜的網站，我們還建議設置[**視覺回歸測試**](/blog/upgrading-frontend-dependencies-with-confidence-using-visual-regression-testing)，這是確保網站視覺效果保持一致的好方法。Docusaurus v3 主要升級了依賴項，預計不會產生任何視覺變化。

:::

:::note

請查閱 [**Docusaurus v3.0.0**](https://github.com/facebook/docusaurus/releases/tag/v3.0.0) 的發布說明，並瀏覽相關的 pull-requests 以獲取更多有用資訊及本文提及的每項變更背後的動機。

:::

## 升級依賴項

升級至 Docusaurus v3 需要升級核心 Docusaurus 依賴項 (`@docusaurus/name`)，以及其他相關套件。

Docusaurus v3 現在使用以下依賴項：

- Node.js v18.0+
- React v18.0+
- MDX v3.0+
- TypeScript v5.1+
- prism-react-renderer v2.0+
- react-live v4.0+
- remark-emoji v4.0+
- mermaid v10.4+

:::warning[升級社群插件]

如果您的網站使用了第三方社群插件和主題，您可能需要升級它們。

在嘗試升級前，請確保這些插件與 Docusaurus v3 相容。

:::

典型的 `package.json` 依賴項升級範例：

```diff title="package.json"
 {
   "dependencies": {
     // upgrade to Docusaurus v3
-    "@docusaurus/core": "2.4.3",
-    "@docusaurus/preset-classic": "2.4.3",
+    "@docusaurus/core": "3.0.0",
+    "@docusaurus/preset-classic": "3.0.0",
     // upgrade to MDX v2
-    "@mdx-js/react": "^1.6.22",
+    "@mdx-js/react": "^3.0.0",
     // upgrade to prism-react-renderer v2.0+
-    "prism-react-renderer": "^1.3.5",
+    "prism-react-renderer": "^2.1.0",
     // upgrade to React v18.0+
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     // upgrade Docusaurus dev dependencies to v3
-    "@docusaurus/module-type-aliases": "2.4.3",
-    "@docusaurus/types": "2.4.3"
+    "@docusaurus/module-type-aliases": "3.0.0",
+    "@docusaurus/types": "3.0.0"
   }
   "engines": {
     // require Node.js 18.0+
-    "node": ">=16.14"
+    "node": ">=18.0"
   }
 }
```

對於 TypeScript 使用者：

```diff title="package.json"
 {
   "devDependencies": {
     // swap the external TypeScript config package for the new official one
-    "@tsconfig/docusaurus": "^1.0.7",
+    "@docusaurus/tsconfig": "3.0.0",
     // upgrade React types to v18.0+
-    "@types/react": "^17.0.69",
+    "@types/react": "^18.2.29",
     // upgrade TypeScript to v5.1+
-    "typescript": "~4.7.4"
+    "typescript": "~5.2.2"
   }
 }
```

## 升級 MDX

MDX 是 Docusaurus 的主要依賴項之一，負責將您的 `.md` 和 `.mdx` 檔案編譯為 React 元件。

從 MDX v1 過渡到 MDX v3 是採用 Docusaurus v3 的**主要挑戰**。大多數破壞性變更來自 MDX v2，而 MDX v3 是一個相對較小的版本。

某些在 Docusaurus v2 下成功編譯的文件，現在可能在 Docusaurus v3 下**無法編譯**。

:::tip[提前找出有問題的內容]

在您的網站上執行 [`npx docusaurus-mdx-checker`](https://github.com/slorber/docusaurus-mdx-checker)，以獲取在 Docusaurus v3 下無法編譯的檔案清單。

此命令也是估算使您的內容相容所需工作量的好方法。請記住，大部分工作可以通過[為 Docusaurus v3 準備您的內容](/blog/preparing-your-site-for-docusaurus-v3)提前完成。

:::

其他文件也可能**呈現不同**。

:::tip[使用視覺回歸測試]

對於大型網站而言，手動審查所有頁面相當耗時，我們建議您設置[視覺回歸測試](https://docusaurus.io/blog/upgrading-frontend-dependencies-with-confidence-using-visual-regression-testing)。

:::

升級至 MDX 將伴隨 [MDX v2](https://mdxjs.com/blog/v2/) 和 [MDX v3](https://mdxjs.com/blog/v3/) 發佈公告中記載的所有重大變更。大多數變更來自 MDX v2。[MDX v2 遷移指南](https://mdxjs.com/migrating/v2/)中有關於[更新 MDX 文件](https://mdxjs.com/migrating/v2/#update-mdx-files)的章節，這對我們特別重要。同時請務必閱讀[MDX 疑難排解](https://mdxjs.com/docs/troubleshooting-mdx/)頁面，該頁面能協助您解讀常見的 MDX 錯誤訊息。

請同時參閱我們更新後的[**MDX 與 React**](../guides/markdown-features/markdown-features-react.mdx)文件頁面。

### 使用 MDX 遊樂場

MDX 遊樂場是您的新利器。它能幫助您理解內容如何**被編譯為 React 元件**，並隔離排查編譯或渲染問題。

- [MDX 遊樂場 - 當前版本](https://mdxjs.com/playground/)
- [MDX 遊樂場 - v1](https://mdx-git-renovate-babel-monorepo-mdx.vercel.app/playground/)

<details>
  <summary>Configuring the MDX playground options for Docusaurus</summary>

To obtain a compilation behavior similar to what Docusaurus v2 uses, please turn on these options on the [MDX playground](https://mdxjs.com/playground/):

- Use `MDX`
- Use `remark-gfm`
- Use `remark-directive`

![Screenshot of the MDX playground's options panel, with only the "Use `MDX`", "Use `remark-gfm`", and "Use `remark-directive`" options checked](@site/blog/2023/09-29-preparing-your-site-for-docusaurus-v3/img/mdx2-playground-options.png)

</details>

並排使用兩個 MDX 遊樂場時，您會很快注意到某些內容在 v2 中的編譯方式不同或無法編譯。

:::tip[讓您的內容具備未來兼容性]

目標是重構有問題的內容，使其**能同時在兩個 MDX 版本中正常運作**。這樣當您升級至 Docusaurus v3 時，這些內容就能直接無縫使用。

:::

### 使用 MDX 檢查器 CLI

我們提供了 [docusaurus-mdx-checker](https://github.com/slorber/docusaurus-mdx-checker) CLI 工具，可輕鬆找出有問題的內容。在您的網站上執行此命令，即可獲取無法在 MDX v3 下編譯的文件清單。

```bash
npx docusaurus-mdx-checker
```

對於每個編譯問題，CLI 會記錄文件路徑和需查看的行號。

![終端機截圖顯示 MDX 檢查器 CLI 輸出範例，包含數個錯誤訊息](@site/blog/2023/09-29-preparing-your-site-for-docusaurus-v3/img/mdx-checker-output.png)

:::tip

使用此 CLI 來評估讓您的內容兼容 MDX v3 所需的工作量。

:::

:::warning

此 CLI 僅為最佳努力方案，且**僅回報編譯錯誤**。

它不會回報那些不產生錯誤但可能影響內容顯示的細微編譯變更。要捕捉這些問題，我們建議使用[視覺回歸測試](/blog/upgrading-frontend-dependencies-with-confidence-using-visual-regression-testing)。

:::

### 常見 MDX 問題

Docusaurus 無法詳盡記錄 MDX 帶來的所有變更。這是[MDX v2](https://mdxjs.com/migrating/v2/) 和 [MDX v3](https://mdxjs.com/migrating/v3/) 遷移指南的責任。

然而，透過升級數個 Docusaurus 網站，我們注意到大多數問題可歸納為幾種我們已為您記錄的案例。

#### 錯誤使用 `{`

`{` 字元用於開啟 [JavaScript 表達式](https://mdxjs.com/docs/what-is-mdx/#expressions)。若您置於 `{expression}` 中的內容不是有效表達式，MDX 現在會直接報錯。

```md title="example.md"
The object shape looks like {username: string, age: number}
```

:::danger[錯誤訊息]

> 無法使用 acorn 解析表達式：表達式後出現意外內容

:::

:::tip[如何升級]

可用的修復選項：

- 使用行內代碼：`{username: string, age: number}`
- 使用 HTML 代碼：`&#123;`
- 使用跳脫字元：`\{`

:::

#### 不正確使用 `<`

`<` 字元用於開啟 [JSX 標籤](https://mdxjs.com/docs/what-is-mdx/#jsx)。若 MDX 認為你的 JSX 無效，現在會直接報錯。

```md title="example.md"
Use Android version <5

You can use a generic type like Array<T>

Follow the template "Road to <YOUR_MINOR_VERSION>"
```

:::danger[錯誤訊息]

> 在名稱前出現意外字元 `5` (U+0035)，預期應為可作為名稱開頭的字元，例如字母、`$` 或 `_`

> 在 `paragraph` 結束前預期應有 `<T>` (1:6-1:9) 的閉合標籤 end-tag-mismatch mdast-util-mdx-jsx

> 在 `paragraph` 結束前預期應有 `<YOUR_MINOR_VERSION>` (134:19-134:39) 的閉合標籤

:::

:::tip[如何升級]

可用的修復選項：

- 使用行內代碼：`Array<T>`
- 使用 HTML 代碼：`&lt;` 或 `&#60;`
- 使用跳脫字元：`\<`

:::

#### 不正確使用 GFM 自動連結

Docusaurus 支援 [GitHub 風味 Markdown (GFM)](https://github.github.com/gfm/)，但 MDX 不再支援使用 `<link>` 語法的[自動連結](https://github.github.com/gfm/#autolinks)。

```md title="example.md"
<sebastien@thisweekinreact.com>

<http://localhost:3000>
```

:::danger[錯誤訊息]

> 名稱中出現意外字元 `@` (U+0040)，預期應為名稱字元如字母、數字、`$` 或 `_`；屬性前的空白；或標籤結尾（注意：在 MDX 中建立連結請使用 `[文字](網址)`）

> 在本地名稱前出現意外字元 `/` (U+002F)，預期應為可作為名稱開頭的字元，例如字母、`$` 或 `_`（注意：在 MDX 中建立連結請使用 `[文字](網址)`）

:::

:::tip[如何升級]

使用標準 Markdown 連結，或移除 `<` 和 `>`。MDX 和 GFM 已能自動連結純文字。

{/* prettier-ignore */}
```md title="範例.md"
sebastien@thisweekinreact.com
[sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com)

http://localhost:3000
[http://localhost:3000](http://localhost:3000)
```

:::

#### 小寫的 MDXComponent 映射

對於提供[自訂 `MDXComponent` 映射](../guides/markdown-features/markdown-features-react.mdx#mdx-component-scope)的使用者，元件現在會被「沙盒化」：

- `MDXComponent` 映射中的 `h1` 僅適用於 `# 標題` 而不適用於 `<h1>標題</h1>`
- **小寫的**自訂元件名稱將不再被其對應的 `MDXComponent` 元件替換

:::danger[視覺差異]

你的 [`MDXComponent` 元件映射](../guides/markdown-features/markdown-features-react.mdx#mdx-component-scope)可能不會像以前那樣被應用，且你的自訂元件可能不再被使用。

:::

:::tip[如何升級]

對於原生 Markdown 元素，您可以繼續使用**小寫**：`p`、`h1`、`img`、`a`...

對於其他任何元素，**請使用大寫名稱**。

```diff title="src/theme/MDXComponents.js"
 import MDXComponents from '@theme-original/MDXComponents';

 export default {
   ...MDXComponents,
   p: (props) => <p {...props} className="my-paragraph"/>
-  myElement: (props) => <div {...props} className="my-class" />,
+  MyElement: (props) => <div {...props} className="my-class" />,
 };
```

:::

#### 非預期的額外段落

在 MDX v3 中，現在可以更輕鬆地交錯使用 JSX 和 Markdown，而無需額外的換行符。在多行上編寫內容也可能產生新的預期 `<p>` 標籤。

:::danger[視覺差異]

請看這段內容在 MDX v1 和 v3 中的渲染方式有何不同。

```md title="example.md"
<div>Some **Markdown** content</div>
<div>
  Some **Markdown** content
</div>
```

{/* prettier-ignore */}
```html title="MDX v1 輸出"
<div>Some **Markdown** content</div>
<div>Some **Markdown** content</div>
```

{/* prettier-ignore */}
```html title="MDX v3 輸出"
<div>Some <strong>Markdown</strong> content</div>
<div><p>Some <strong>Markdown</strong> content</p></div>
```

:::

:::tip[如何升級]

如果您不希望有額外的 `<p>` 標籤，請根據具體情況重構內容，使用單行 JSX 標籤。

```diff
 <figure>
   <img src="/img/myImage.png" alt="My alt" />
-  <figcaption>
-    My image caption
-  </figcaption>
+  <figcaption>My image caption</figcaption>
 </figure>
```

:::

#### 非預期的指令用法

Docusaurus v3 現在使用 [Markdown 指令](https://talk.commonmark.org/t/generic-directives-plugins-syntax/444)（通過 [remark-directive](https://github.com/remarkjs/remark-directive) 實現）作為一種通用方式來支持 admonitions 和其他即將推出的 Docusaurus 功能。

```md title="example.md"
This is a :textDirective

::leafDirective

:::containerDirective

Container directive content

:::
```

:::danger[視覺變化]

指令會被解析並由其他 Remark 插件處理。未處理的指令將被忽略，並且不會以其原始形式渲染回來。

```md title="example.md"
The AWS re:Invent conf is great
```

由於 `:Invent` 被解析為文本指令，現在將渲染為：

```
The AWS re
conf is great
```

:::

:::tip[如何升級]

- 使用 HTML 代碼：`&#58;`
- 在 `:` 後添加空格（如果合理）：`: text`
- 轉義它：`\:`

:::

#### 不支持的縮進代碼塊

MDX 不再將縮進文本轉換為代碼塊。

```md title="example.md"
    console.log("hello");
```

:::danger[視覺變化]

升級通常不會產生新的 MDX 編譯錯誤，但可能導致內容以非預期的方式渲染，因為不再有代碼塊。

:::

:::tip[如何升級]

使用常規的代碼塊語法代替縮進：

````md title="example.md"
```js
console.log('hello');
```
````

:::

### 其他 Markdown 不兼容性

#### 以空格或標點符號開頭或結尾的強調

新的 MDX 解析器現在嚴格遵守 CommonMark 規範。CommonMark 規範自 v0.14 起引入了關於空格和標點符號的強調規則，這對於不使用空格分隔單詞的語言尤其不兼容。

日文和中文受此影響最大，但其他某些語言也可能受到影響（例如泰文和高棉文），例如當您嘗試強調行內程式碼或連結時。使用空格分隔單詞的語言受影響程度較小。

以下範例中的 `**`（除了 `` `**` `` 外）在 Docusaurus 2 中被正確解析，但在 Docusaurus 3 中則不再如此。

```md title="example.md"
**Do not end a range of emphasis with a space. **Or `**` will not work as intended.

<!-- Japanese -->
**「。」の後に文を続けると`**`が意図した動作をしません。**また、**[リンク](https://docusaurus.io/)**や**`コード`**のすぐ外側に`**`、そのさらに外側に句読点以外がある場合も同様です。
```

<details>
<summary>See the detailed conditions and how to upgrade</summary>

If `*` or `**` matches either of the following conditions, it will not work as the beginning of an emphasis mark anymore:

- The next character is a space (e.g. `word* word`)
- The previous character is a punctuation character and the next character is a letter (not a space or punctuation character) (e.g. `文**（文）`)

On the contrary, if `*` or `**` matches either of the following conditions, it will not work as the end of an emphasis mark anymore:

- The previous character is a space (e.g. `word *word`)
- The next character is a punctuation character and the previous character is a letter (e.g. `文。**文`)

“A punctuation character” includes non-ASCII ones, brackets, quotation marks and some symbols including `%` and `@`. More strictly speaking, a character whose 2-letters Unicode category starts with `P` is treated as a punctuation character here.

:::tip[How to upgrade]

If the offending emphasis mark is next to a space, move the space out of the range of emphasis:

```md title="english.md"
**Do not end a range of emphasis with a space.** Or `**` will not work.
```

If the offending emphasis mark is surrounded by both a punctuation character and a letter, you can fix it without modifying the content by:

1. Convert the document to MDX if it is a vanilla Markdown.
2. replace the offending emphasis mark with a raw HTML tag (`<em>` or `<strong>`) instead:

{/* prettier-ignore */}
```mdx title="japanese.mdx"
<strong>「。」の後に文を続けると`**`が意図した動作をしません。</strong>また、<strong>[リンク](https://docusaurus.io/)</strong>や<strong>`コード`</strong>のすぐ外側に`**`、そのさらに外側に句読点以外がある場合も同様です。
```

While not an ideal solution, you can also either of the following without converting the document to MDX:

- Move the most outside punctuation character out of the emphasis mark.

  {/* prettier-ignore */}
  ```md title="japanese.md"
  **「。」の後に文を続けると`**`が意図した動作をしません**。また、[**リンク**](https://docusaurus.io/)や・・・
  ```

- Put a space just outside of the offending `*` or `**`. This solution does not force you to convert the document to MDX.

  {/* prettier-ignore */}
  ```md title="japanese.md"
  **「。」の後に文を続けると`**`が意図した動作をしません。** また、**[リンク](https://docusaurus.io/)** や **`コード`** のすぐ外側に`**`、そのさらに外側に句読点以外がある場合も同様です。
  ```

:::

</details>

### MDX 插件

MDX 生態系統中的所有官方套件（Unified、Remark、Rehype 等）現在都[僅支援 ES 模組](https://gist.github.com/sindresorhus/a39789f98801d908bbc7ff3ecc99d99c)，不再支援 [CommonJS](https://nodejs.org/api/modules.html#modules-commonjs-modules)。

實際上這意味著您不能再使用 `require("remark-plugin")`。

:::tip[如何升級]

Docusaurus v3 現在支援 [ES 模組](https://flaviocopes.com/es-modules/)設定檔。我們建議您將設定檔遷移到 ES 模組，這樣可以輕鬆導入 Remark 插件：

```js title="docusaurus.config.js"
import remarkPlugin from 'remark-plugin';

export default {
  title: 'Docusaurus',
  /* 在此使用 remark 插件的網站設定 */
};
```

如果您想繼續使用 CommonJS 模組，可以使用動態導入作為變通方法，這樣可以在 CommonJS 模組中導入 ES 模組。幸運的是，[Docusaurus 設定支援使用非同步函式](/docs/configuration#syntax-to-declare-docusaurus-config)來實現這一點。

```js title="docusaurus.config.js"
module.exports = async function () {
  const myPlugin = (await import('remark-plugin')).default;
  return {
    // 網站設定...
  };
};
```

:::

:::info[給插件開發者]

如果您創建了自訂的 Remark 或 Rehype 插件，由於新的 AST 結構，您可能需要重構這些插件，甚至完全重寫它們。我們創建了一個[專屬支援討論](https://github.com/facebook/docusaurus/discussions/9337)來幫助插件開發者升級他們的程式碼。

:::

### 格式化工具

最常見的格式化工具 Prettier 目前僅支援舊版的 MDX v1，截至 Docusaurus v3.0.0 尚未支援 v3。您可以在程式碼的不相容部分前添加 `{/* prettier-ignore */}` 以使其與 Prettier 相容。

```mdx
{/* prettier-ignore */}
<SomeComponent>Some long text in the component</SomeComponent>
```

如果您厭倦了頻繁插入 `{/* prettier-ignore */}`，可以考慮在 Prettier 開始支援 MDX v3 之前，通過在 `.prettierignore` 檔案中添加以下內容來禁用 Prettier 對 MDX 的格式化：

```txt title=".prettierignore"
*.mdx
```

## 其他重大變更

除了 MDX v3 升級外，以下是 Docusaurus v3 帶來的所有重大變更的完整列表。

### Node.js v18.0

Node.js 16 [已達到生命週期終止](https://nodejs.org/en/blog/announcements/nodejs16-eol)，Docusaurus v3 現在需要 **Node.js >= 18.0**。

:::tip[如何升級]

在您的電腦上安裝 Node.js 18.0 或更高版本。

最終，配置您的持續整合、CDN 或主機以使用這個新的 Node.js 版本。

您還可以更新網站的 `package.json` 以防止使用舊的不支援版本：

```diff title="package.json"
 {
   "engines": {
-     "node": ">=16.14"
+     "node": ">=18.0"
   }
 }
```

在升級到 Docusaurus v3 之前，先將您的 Docusaurus v2 網站升級到 Node.js 18。

:::

### React v18.0+

Docusaurus v3 現在需要 **React >= 18.0**。

React 18 自帶了一些破壞性變更，這些變更的處理難度取決於您為網站編寫的自訂 React 程式碼量。官方主題和外掛程式已相容於 React 18。

:::info[升級指南]

請閱讀官方文件 [React v18.0](https://react.dev/blog/2022/03/29/react-v18) 與 [How to Upgrade to React 18](https://react.dev/blog/2022/03/08/react-18-upgrade-guide)，並檢查您的 React 程式碼以確認哪些元件可能受此升級影響。

建議特別關注以下項目：
- 狀態元件的自動批次處理
- 主控台報告的新 React hydration 錯誤

:::

:::danger[React 18 新功能的實驗性支援]

React 18 引入了新功能：
- `<Suspense>`
- `React.lazy()`
- `startTransition`

Docusaurus 對這些功能的支援目前處於實驗階段。未來可能需要調整整合方式，這可能導致運行時行為變更。

:::

### Prism-React-Renderer v2.0+

Docusaurus v3 將 [`prism-react-renderer`](https://github.com/FormidableLabs/prism-react-renderer) 升級至 v2.0+。此函式庫用於程式碼區塊的語法突顯功能。

:::info[升級指南]

這是包含破壞性變更的新主版本，我們無法保證嚴格的向後相容性。[`prism-react-renderer` v2 版本說明](https://github.com/FormidableLabs/prism-react-renderer/releases/tag/prism-react-renderer%402.0.0) 並未詳盡列出所有變更，但 Docusaurus 使用者需注意以下 3 項重大變更。

需更新相依套件：

```diff title="package.json"
 {
   "dependencies": {
-    "prism-react-renderer": "^1.3.5",
+    "prism-react-renderer": "^2.1.0",
 }
```

匯入主題的 API 已更新：

```diff title="docusaurus.config.js"
- const lightTheme = require('prism-react-renderer/themes/github');
- const darkTheme = require('prism-react-renderer/themes/dracula');
+ const {themes} = require('prism-react-renderer');
+ const lightTheme = themes.github;
+ const darkTheme = themes.dracula;
```

先前 `react-prism-render` v1 [預設包含更多語言](https://github.com/FormidableLabs/prism-react-renderer/blob/v1.3.5/src/vendor/prism/includeLangs.js)。從 v2.0+ 開始，[預設包含的語言較少](https://github.com/FormidableLabs/prism-react-renderer/blob/prism-react-renderer%402.1.0/packages/generate-prism-languages/index.ts#L9)。您可能需要在 Docusaurus 設定中新增額外語言：

```js title="docusaurus.config.js"
const siteConfig = {
  themeConfig: {
    prism: {
      // highlight-next-line
      additionalLanguages: ['bash', 'diff', 'json'],
    },
  },
};
```

:::

### React-Live v4.0+

對於使用 `@docusaurus/theme-live-codeblock` 套件的使用者，Docusaurus v3 將 [`react-live`](https://github.com/FormidableLabs/react-live) 升級至 v4.0+。

:::info[升級指南]

理論上您無需任何操作，現有的互動式程式碼區塊應能繼續正常運作。

但這是包含破壞性變更的新主版本，我們無法保證嚴格的向後相容性。若遇到問題，請參閱 [v3](https://github.com/FormidableLabs/react-live/releases/tag/v3.0.0) 和 [v4](https://github.com/FormidableLabs/react-live/releases/tag/v4.0.0) 版本說明。

:::

### remark-emoji v4.0+

Docusaurus v3 將 [`remark-emoji`](https://github.com/rhysd/remark-emoji) 升級至 v4.0+。此函式庫用於支援 Markdown 中的 `:emoji:` 快捷鍵。

:::info[升級指南]

多數 Docusaurus 使用者無需任何操作。使用表情符號短碼的使用者應閱讀 [變更日誌](https://github.com/rhysd/remark-emoji/blob/master/CHANGELOG.md) 並確認表情符號仍能正常顯示。

> **重大變更** 將 [node-emoji](https://www.npmjs.com/package/node-emoji) 從 v1 升級至 v2。此變更新增了許多新表情符號支援，並移除了 GitHub 上不再有效的舊表情符號短碼。

:::

### Mermaid v10.4+

對於使用 `@docusaurus/theme-mermaid` 套件的使用者，Docusaurus v3 將 [`mermaid`](https://github.com/mermaid-js/mermaid) 升級至 v10.4+。

:::info[升級指南]

理論上您無需任何操作，現有圖表應能繼續正常運作。

但請注意這是包含重大變更的主要函式庫版本，我們無法保證完全向下相容。若遇到問題請閱讀 [v10 變更日誌](https://github.com/mermaid-js/mermaid/releases/tag/v10.0.0)。

:::

### TypeScript v5.1+

Docusaurus v3 現在需要 **TypeScript >= 5.1**。

:::info[升級指南]

將依賴項升級至 TypeScript 5+：

```diff title="package.json"
 {
   "devDependencies": {
-    "typescript": "~4.7.4"
+    "typescript": "~5.2.2"
   }
 }
```

:::

### TypeScript 基礎配置

官方 Docusaurus TypeScript 配置已從外部套件 [`@tsconfig/docusaurus`](https://www.npmjs.com/package/@tsconfig/docusaurus) 重新內化至我們的新單體倉庫套件 [`@docusaurus/tsconfig`](https://www.npmjs.com/package/@docusaurus/tsconfig)。

此新套件與其他 Docusaurus 核心套件同步版本，將用於確保 TypeScript 的向下相容性與主要版本升級時的重大變更。

:::info[升級指南]

將外部 TypeScript 配置套件替換為新版官方套件：

```diff title="package.json"
 {
   "devDependencies": {
-    "@tsconfig/docusaurus": "^1.0.7",
+    "@docusaurus/tsconfig": "3.0.0",
   }
 }
```

在 `tsconfig.json` 檔案中使用：

```diff title="tsconfig.json"
 {
-  "extends": "@tsconfig/docusaurus/tsconfig.json",
+  "extends": "@docusaurus/tsconfig",
   "compilerOptions": {
     "baseUrl": "."
   }
 }
```

:::

### 新配置載入器

Docusaurus v3 將其內部配置載入函式庫從 [`import-fresh`](https://github.com/sindresorhus/import-fresh) 更換為 [`jiti`](https://github.com/unjs/jiti)。此函式庫負責載入如 `docusaurus.config.js` 或 `sidebars.js` 等檔案，以及 Docusaurus 插件。

:::info[升級指南]

理論上您無需任何操作，現有配置檔案應能繼續正常運作。

但請注意這是主要依賴項更換，可能會出現細微的行為差異。

:::

### 警告提示框

由於歷史原因，我們支援未記載的紅色警告提示框 `:::warning`。

:::danger[警告]

這是 Docusaurus v2 的 `:::warning` 提示框。

:::

然而其顏色與圖示始終不正確。Docusaurus v3 正式重新引入 `:::warning` 提示框，將其記載於文件中，並修正了顏色與圖示。

:::warning

這是 Docusaurus v3 的 `:::warning` 警示框。

:::

:::info[如何升級]

若您先前使用未正式記載的 `:::warning` 警示框，請逐一確認黃色是否適合替代原有樣式。若需維持紅色警示樣式，請改用 `:::danger`。

Docusaurus v3 也[棄用了 `:::caution`](https://github.com/facebook/docusaurus/pull/9308) 警示框。請將 `:::caution`（黃色）重構為 `:::warning`（黃色）或 `:::danger`（紅色）。

若需保留「caution」標題，可重構為 `:::warning[caution]`（黃色）。

:::

### 版本化側邊欄

此重大變更僅影響 **在 `v2.0.0-beta.10` 版（2021年12月）前啟用文檔版本化功能的 Docusaurus v2 早期採用者**。

當建立 `v1.0.0` 版本時，側邊欄檔案會包含 `version-v1.0.0/` 前綴，而 [Docusaurus v3 已不再支援此格式](https://github.com/facebook/docusaurus/pull/9310)。

```json title="versioned_sidebars/version-v1.0.0-sidebars.json"
{
  "version-v1.0.0/docs": [
    "version-v1.0.0/introduction",
    "version-v1.0.0/prerequisites"
  ]
}
```

:::info[如何升級]

從版本化側邊欄中移除無效的版本前綴。

```json title="versioned_sidebars/version-v1.0.0-sidebars.json"
{
  "docs": ["introduction", "prerequisites"]
}
```

:::

### 部落格饋送限制

`@docusaurus/plugin-content-blog` 現在預設將 RSS 饋送限制為最近20篇文章。對於大型 Docusaurus 部落格，這是更合理的預設值，可避免 RSS 檔案持續膨脹。

:::info[如何升級]

若不認同此新預設行為，可透過新增的 `limit: false` 饋送選項恢復原先「無限制」的行為：

```js title="docusaurus.config.js"
const blogOptions = {
  feedOptions: {
    // highlight-next-line
    limit: false,
  },
};
```

:::

### 文檔主題重構

對於曾替換（swizzled）文檔相關主題元件（如 `@theme/DocPage`）的用戶，這些元件已大幅重構以簡化自訂流程。

技術上**這不屬於重大變更**，因這些元件**標記為不建議替換**，但許多 Docusaurus 網站仍替換了文檔元件，需注意自訂內容可能導致相容性問題。

:::info[如何升級]

刪除所有替換過的元件，重新替換後，再基於新版元件重新套用自訂設定。

或參考[拉取請求說明](https://github.com/facebook/docusaurus/pull/7966)了解新版主題元件樹結構，嘗試手動修補已替換的元件。

:::

## 選用變更

部分變更非強制性，但了解後可充分發揮 Docusaurus v3 功能。

### 自動 JSX 運行時

Docusaurus v3 現採用 React 18 的[「自動」JSX 運行時](https://legacy.reactjs.org/blog/2020/09/22/introducing-the-new-jsx-transform.html)。

未使用 React API 的 JSX 檔案不再需要手動導入 React。

```diff title="src/components/MyComponent.js"
- import React from 'react';

  export default function MyComponent() {
    return <div>Hello</div>;
  }
```

### ESM 與 TypeScript 設定檔

Docusaurus v3 支援 ESM 與 TypeScript 設定檔，建議考慮採用這些新選項。

```js title="docusaurus.config.js"
export default {
  title: 'Docusaurus',
  url: 'https://docusaurus.io',
  // your site config ...
};
```

```ts title="docusaurus.config.ts"
import type {Config} from '@docusaurus/types';
import type * as Preset from '@docusaurus/preset-classic';

const config: Config = {
  title: 'My Site',
  favicon: 'img/favicon.ico',
  presets: [
    [
      'classic',
      {
        /* Your preset config here */
      } satisfies Preset.Options,
    ],
  ],

  themeConfig: {
    /* Your theme config here */
  } satisfies Preset.ThemeConfig,
};

export default config;
```

### 使用 `.mdx` 副檔名

我們建議當你在 Markdown 檔案中使用 JSX、`import` 或 `export`（即 MDX 功能）時，使用 `.mdx` 副檔名。這在語義上更為正確，並能提升與外部工具（如 IDE、格式化工具、linter 等）的相容性。

在未來版本的 Docusaurus 中，`.md` 檔案將被解析為標準的 [CommonMark](https://commonmark.org/)，該格式不支援這些功能。在 Docusaurus v3 中，`.md` 檔案仍會被編譯為 MDX 檔案，但未來可以[選擇啟用 CommonMark](https://github.com/facebook/docusaurus/issues/3018)。

### 升級數學套件

如果你使用 Docusaurus 來渲染[數學方程式](../guides/markdown-features/markdown-features-math-equations.mdx)，你應該升級 MDX 插件。

請確保在 Docusaurus v3（使用 MDX v3）中使用 `remark-math 6` 和 `rehype-katex 7`。我們無法保證其他版本能正常運作。

```diff package.json
{
-  "remark-math": "^3.0.0",
+  "remark-math": "^6.0.0",
-  "rehype-katex": "^5.0.0"
+  "rehype-katex": "^7.0.0"
}
```

### 關閉 MDX v1 相容性

Docusaurus v3 預設啟用了 [MDX v1 相容性選項](../api/docusaurus.config.js.mdx#markdown)。

```js title="docusaurus.config.js"
export default {
  markdown: {
    mdx1Compat: {
      comments: true,
      admonitions: true,
      headingIds: true,
    },
  },
};
```

#### `comments` 選項

此選項允許在 MDX 中使用 HTML 註解，而官方已不再支援 HTML 註解。

對於 MDX 檔案，我們建議逐步改用 MDX 的 `{/* 註解 */}` 而非 HTML 的 `<!-- 註解 -->`，然後關閉此相容性選項。

:::info[部落格截斷標記]

預設的部落格截斷標記現在同時支援 `<!-- truncate -->` 和 `{/* truncate */}`。

:::

#### `admonitions` 選項

此選項允許使用 Docusaurus v2 的[警告標題](../guides/markdown-features/markdown-features-admonitions.mdx#specifying-title)語法：

```md
:::note[Your Title]

content

:::
```

Docusaurus 現在使用 [Markdown 指令](https://talk.commonmark.org/t/generic-directives-plugins-syntax/444)（透過 [remark-directive](https://github.com/remarkjs/remark-directive) 實現）來實作警告，而提供指令標籤的語法需要使用方括號：

```md
:::note[Your Title]

content

:::
```

我們建議逐步改用新的 Markdown 指令標籤語法，然後關閉此相容性選項。

#### `headingIds` 選項

此選項允許使用 Docusaurus v2 的[明確標題 ID](../guides/markdown-features/markdown-features-toc.mdx#heading-ids) 語法：

```mdx-code-block
<Code language="md">{'### Hello World \u007B#my-explicit-id}\n'}</Code>
```

此語法現在是無效的 MDX，需要對 `{` 字元進行跳脫：`{#my-explicit-id}`。

我們建議暫時保持此相容性選項開啟，直到我們提供與新版 MDX 相容的新語法。

## 尋求協助

若遇到任何升級問題，首先可以嘗試以下步驟：

- 確保所有文件都能在 [MDX 遊樂場](https://mdxjs.com/playground/)中編譯，或使用 [`npx docusaurus-mdx-checker`](https://github.com/slorber/docusaurus-mdx-checker)
- 刪除 `node_modules` 並重新執行 `npm install`
- 執行 `docusaurus clear` 以清除快取
- 移除可能不支援 Docusaurus v3 的第三方插件
- 刪除所有你 swizzle 過的元件

完成上述步驟後，你可以透過以下支援管道尋求協助：

- [Docusaurus v3 - 升級支援](https://github.com/facebook/docusaurus/discussions/9336)
- [Docusaurus v3 - Discord 頻道 #migration-v2-to-v3](https://discord.com/channels/398180168688074762/1154771869094912090)
- [MDX v3 - 升級支援](https://github.com/facebook/docusaurus/discussions/9053)
- [MDX v3 - Remark/Rehype 插件支援](https://github.com/facebook/docusaurus/discussions/9337)
- [MDX v3 - Discord 頻道 #migration-mdx-v3](https://discord.com/channels/398180168688074762/1116724556976111616)

請注意**我們的時間非常寶貴**。為確保您的支援請求不會被忽略，我們誠摯地請求您：

- 提供一個我們能輕鬆執行的**最小化重現範例**，最好使用 [docusaurus.new](https://docusaurus.new) 建立
- 提供一個能展示問題的線上部署網址（如果您的網站能成功建置）
- 清楚說明問題，而非僅提供模糊的「它無法運作」這樣的描述
- 包含盡可能多的相關資料：程式碼片段、儲存庫網址、Git 分支網址、完整堆疊追蹤、螢幕截圖和影片
- 以清晰、簡潔的方式呈現您的請求，向我們展示您已付出努力幫助我們幫助您

或者，您可以尋找付費的 [Docusaurus 服務提供商](https://github.com/facebook/docusaurus/discussions/9281) 來為您執行此升級。如果您的網站是開源的，您也可以向我們的社群尋求 [免費、善意的協助](https://github.com/facebook/docusaurus/discussions/9283)。